# solqueue

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
client/cli/: package-lock.json  package.json  tsconfig.json
client/cli/src/: index.js  index.ts
client/dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/dashboard/public/: solqueue.json
client/dashboard/src/: App.tsx  main.tsx  vite-env.d.ts
programs/solqueue/: Cargo.toml
programs/solqueue/src/: errors.rs  events.rs  lib.rs
programs/solqueue/src/instructions/: claim_job.rs  close_job.rs  complete_job.rs  deactivate_worker.rs  enqueue_job.rs  expire_job.rs  fail_job.rs  initialize_queue.rs  mod.rs  pause_queue.rs  register_worker.rs
programs/solqueue/src/state/: job.rs  mod.rs  queue_config.rs  worker.rs
tests/: solqueue.js  solqueue.ts  tsconfig.json
