[package]
name = "solqueue"
version = "0.1.0"
description = "On-Chain Job Queue — Solana Challenge Submission"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solqueue"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
solana-program = "=1.18.26"